# kara

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml
src/: CMakeLists.txt  clib-macos.json  example.kara  example.txt  main.cpp  print.kara
src/builder/: CMakeLists.txt
src/builder/include/builder/: builder.h  builtins.h  error.h  handlers.h  library.h  lifetime.h  manager.h  operations.h  pch.h  platform.h  target.h
src/builder/include/builder/lifetime/: array.h  lifetime.h  multiple.h  null.h  reference.h  variable.h
src/builder/src/: assign.cpp  block.cpp  builder.cpp  code.cpp  debug.cpp  destroy.cpp  error.cpp  expression.cpp  for.cpp  function.cpp  if.cpp  library.cpp  lifetime.cpp  manager.cpp  platform.cpp  reference.cpp  result.cpp  scope-lifetime.cpp  scope.cpp  search.cpp  statement.cpp  target.cpp  type.cpp  typename.cpp  utilities.cpp  variable.cpp
src/builder/src/lifetime/: array.cpp  lifetime.cpp  multiple.cpp  null.cpp  reference.cpp  variable.cpp
src/builder/src/operations/: call.cpp  expression.cpp  operations.cpp  statements.cpp  utilities.cpp
src/builder/src/operations/handlers/: builtins.cpp  expression.cpp  operations.cpp
src/cli/: CMakeLists.txt
src/cli/include/cli/: cbp.h  cli.h  config.h  exposer.h  lock.h  log.h  manager.h  packages.h  platform.h  utility.h
src/cli/src/: cbp.cpp  cli.cpp  config.cpp  exposer.cpp  lock.cpp  log.cpp  main.cpp  manager.cpp  packages.cpp  platform.cpp  temp.cpp  utility.cpp
src/cli/src/actions/: add.cpp  build.cpp  clean.cpp  compile.cpp  create.cpp  expose.cpp  remove.cpp  run.cpp
src/interfaces/: CMakeLists.txt  interfaces.cpp
src/interfaces/include/interfaces/: header.h  interfaces.h
src/interfaces/src/: header.cpp  try.cpp
src/options/: CMakeLists.txt
src/options/include/options/: options.h
src/options/src/: options.cpp
src/parser/: CMakeLists.txt
src/parser/include/parser/: array.h  as.h  assign.h  block.h  bool.h  call.h  code.h  debug.h  dot.h  expression.h  for.h  function.h  if.h  import.h  index.h  kinds.h  literals.h  null.h  number.h  operator.h  parentheses.h  reference.h  root.h  scope.h  search.h  statement.h  string.h  ternary.h  type.h  typename.h  unary.h  variable.h
src/parser/src/: array.cpp  as.cpp  assign.cpp  block.cpp  bool.cpp  call.cpp  code.cpp  debug.cpp  dot.cpp  expression.cpp  for.cpp  function.cpp  if.cpp  import.cpp  index.cpp  literals.cpp  null.cpp  number.cpp  operator.cpp  parentheses.cpp  reference.cpp  root.cpp  scope.cpp  search.cpp  statement.cpp  string.cpp  ternary.cpp  type.cpp  typename.cpp  unary.cpp  variable.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: expression.h  literals.h  typename.h
src/utils/src/: expression.cpp  typename.cpp
